finalizing loader, correction in the request, finalized app

--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -26,3 +26,9 @@
     margin-top: 25px;
     margin-bottom: 50px;
 }
+
+span{
+    color: #1890ff;
+    font-style: normal;
+    font-weight: normal;
+}
